--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beat'em up on PixiJS + ts, vite</title>
-    <style>html, body {margin:0; padding:0; height:100%; background:black;}
+    <style>html, body {margin:0; padding:0; height:100%; background:#000000;}
     #game-container {display:flex; height:100vh; align-items:center; justify-content:center;}
     canvas {image-rendering: pixelated;}</style>
 </head>
